@@ -128,6 +128,7 @@ Quad Max Parity Values - see Odd Max Values
 Quad Max Values
 Quad Sums (one digit on a quad is the sum of the three others)
 Quadro (no 2x2 in grid has all even or all odd digits)
+QuattroQuadri
 Ratio Pairs - see Kropki and Kropki pairs
 Region Sum Lines (sum of all cells along a line in a region is fixed)
 Region Segment Sum Lines - see Region Sum Lines
@@ -1114,6 +1115,19 @@ setQuadSumArray(list): set multiple quad sum constraints
 Quadro
 ------
 setQuadro(): assert that no 2x2 quad has all even or all odd digits (see Parity Quads)
+
+QuattroQuadri
+-------------
+To model a QuattroQuadri, you must use the class quattroQuadri, e.g.
+
+p = ORsudoku.quattroQuadri(boardSizeRoot,gridSize,irregular,digitSet)
+	Assuming standard square regions, boardSizeRoot is the number of rows/columns in each region, and grid size is number of regions in each row/column of the grid. So a standard QuattroQuadri would have boardSizeRoot = 3 and gridSize = 2. These are the defaults, and need not be given in the declaration.
+	
+	irregular allows the possibility of setting irregular regions. Set to True and use the setRegion method to define regions. Default is False.
+	
+	digitSet is the set of digits allowed. Default is {1,2,3,4,5,6,7,8,9}.
+	
+	So a standard QuattroQuadri puzzle can be defined via p = ORsudoku.quattroQuadri(), with no options set.
 
 Region Sum Lines
 ----------------
